base/services/keycloak/statefullset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: carlosedp/keycloak:v11.0.2
        imagePullPolicy: Always
        # envFrom:
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        # - containerPort: 8443
        #   name: https
        #   protocol: TCP
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        volumeMounts:
        - name: keycloak
          mountPath: /opt/jboss/keycloak/standalone/data
      volumes:
        - name: keycloak
          persistentVolumeClaim:
            claimName: keycloak
