base/services/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector: 
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
  # - name: https
  #   port: 443
  #   targetPort: 8443
