base/services/keycloak/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iam.erpf.de`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: keycloak
          port: 443
  tls:
    secretName: iam-erpf-de-tls
